ros2_ws/src/minisumo_core/log/build_2026-04-15_13-25-41/minisumo_core/stdout_stderr.log
running egg_info
creating build/minisumo_core/minisumo_core.egg-info
writing build/minisumo_core/minisumo_core.egg-info/PKG-INFO
writing dependency_links to build/minisumo_core/minisumo_core.egg-info/dependency_links.txt
writing entry points to build/minisumo_core/minisumo_core.egg-info/entry_points.txt
writing requirements to build/minisumo_core/minisumo_core.egg-info/requires.txt
writing top-level names to build/minisumo_core/minisumo_core.egg-info/top_level.txt
writing manifest file 'build/minisumo_core/minisumo_core.egg-info/SOURCES.txt'
reading manifest file 'build/minisumo_core/minisumo_core.egg-info/SOURCES.txt'
writing manifest file 'build/minisumo_core/minisumo_core.egg-info/SOURCES.txt'
running build
running build_py
creating /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build
creating /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib
creating /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core
copying minisumo_core/logger_csv.py -> /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core
copying minisumo_core/gengar_odom.py -> /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core
copying minisumo_core/__init__.py -> /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core
copying minisumo_core/teleop_rutinas.py -> /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core
copying minisumo_core/odometria.py -> /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core
running install
running install_lib
creating /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core
copying /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core/logger_csv.py -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core
copying /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core/gengar_odom.py -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core
copying /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core/__init__.py -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core
copying /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core/teleop_rutinas.py -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core
copying /home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/build/lib/minisumo_core/odometria.py -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core
byte-compiling /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/logger_csv.py to logger_csv.cpython-38.pyc
byte-compiling /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/gengar_odom.py to gengar_odom.cpython-38.pyc
byte-compiling /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/teleop_rutinas.py to teleop_rutinas.cpython-38.pyc
byte-compiling /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/odometria.py to odometria.cpython-38.pyc
  File "/home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/odometria.py", line 59
    a)
     ^
SyntaxError: unmatched ')'

running install_data
creating /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/share/ament_index
creating /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/share/ament_index/resource_index
creating /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/share/ament_index/resource_index/packages
copying resource/minisumo_core -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/share/ament_index/resource_index/packages
copying package.xml -> /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/share/minisumo_core
running install_egg_info
Copying build/minisumo_core/minisumo_core.egg-info to /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core-0.0.0-py3.8.egg-info
running install_scripts
Installing logger_csv script to /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/minisumo_core
Installing odometria script to /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/minisumo_core
Installing teleop script to /home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/minisumo_core
writing list of installed files to '/home/dae/ros2_ws/src/minisumo_core/build/minisumo_core/install.log'
